- Export number of cores for cpu module. {pull}3192[3192]
- Experimental Prometheus module. {pull}3202[3202]
- Add system socket module that reports all TCP sockets. {pull}3246[3246]
- Kafka consumer groups metricset. {pull}3240[3240]
- Add dynamic configuration reloading for modules. {pull}3281[3281]
- Add docker health metricset {pull}3357[3357]
- System module uses new matchers for white-listing processes. {pull}3469[3469]
- Add CEPH module with health metricset. {pull}3311[3311]
- Add php_fpm module with pool metricset. {pull}3415[3415]

*Packetbeat*

*Topbeat*

*Filebeat*
- Add enabled config option to prospectors. {pull}3157[3157]
- Add target option for decoded_json_field. {pull}3169[3169]
- Add the `pipeline` config option at the prospector level, for configuring the Ingest Node pipeline ID. {pull}3433[3433]
- Update regular expressions used for matching file names or lines (multiline, include/exclude functionality) to new matchers improving performance of simple string matches. {pull}3469[3469]

*Winlogbeat*

- Reduced amount of memory allocated while reading event log records. {pull}3113[3113] {pull}3118[3113]

==== Deprecated

*Affecting all Beats*
- Usage of field _type is deprecated. It should not be used in queries or dashboards. {pull}3409[3409]

*Metricbeat*

*Packetbeat*

*Topbeat*
- Fix error on importing dashboards due to colons in the Caassandra dashboard. {issue}3140[3140]

*Filebeat*

*Winlogbeat*

////////////////////////////////////////////////////////////

[[release-notes-5.1.1]]
=== Beats version 5.1.1
https://github.com/elastic/beats/compare/v5.0.2...v5.1.1[View commits]

==== Breaking changes

*Metricbeat*

- Change data structure of experimental haproxy module. {pull}3003[3003]

*Filebeat*

- If a file is falling under `ignore_older` during startup, offset is now set to end of file instead of 0.
  With the previous logic the whole file was sent in case a line was added and it was inconsistent with