@@ -1400,6 +1400,67 @@ Healthcheck status code
 
 
 [float]
+== image Fields
+
+Docker image metrics.
+
+
+
+[float]
+== id Fields
+
+The image layers identifier.
+
+
+
+[float]
+=== docker.image.id.current
+
+type: keyword
+
+Unique image identifier given upon its creation.
+
+
+[float]
+=== docker.image.id.parent
+
+type: keyword
+
+Identifier of the image, if it exists, from which the current image directly descends.
+
+
+[float]
+=== docker.image.created
+
+type: date
+
+Date and time when the image was created.
+
+
+[float]
+== size Fields
+
+Image size layers.
+
+
+
+[float]
+=== docker.image.size.virtual
+
+type: long
+
+Size of the image.
+
+
+[float]
+=== docker.image.size.regular
+
+type: long
+
+Total size of the all cached images associated to the current image.
+
+
+[float]
 == info Fields
 
 experimental[]
