@@ -1,0 +1,19 @@
+{
+    "@timestamp":"2016-05-23T08:05:34.853Z",
+    "beat":{
+        "hostname":"beathost",
+        "name":"beathost"
+    },
+    "metricset":{
+        "host":"localhost",
+        "module":"docker",
+        "name":"image",
+        "rtt":44269
+    },
+    "docker":{
+        "image":{
+            "example": "image"
+        }
+    },
+    "type":"metricsets"
+}
